--- a/tools/please_pex/preamble/BUILD
+++ b/tools/please_pex/preamble/BUILD
@@ -8,9 +8,7 @@ c_binary(
     srcs = glob(["*.c"]),
     hdrs = glob(["*.h"]),
     compiler_flags = ["-std=c11"],
-    defines = [
-        "_XOPEN_SOURCE=600",
-        ],
+    defines = ["_XOPEN_SOURCE=600"],
     static = True,
     visibility = [
         "//tools/please_pex/pex:preamble",
