Build please_pex releases in native environments
Now that please_pex writes a preamble C binary that is native to each
platform supported by Please, please_pex is no longer just a Go binary
that can be cross-compiled for every platform on a Linux amd64 runner:
the preamble needs to be built natively for each platform and embedded
in the please_pex binary for that platform.

Reorganise the please_pex test, build and release workflow so that the
release binaries are built natively on their respective platforms:
[alpine-builder](https://github.com/please-build/alpine-builder) for
Linux (linking statically to musl results in a nice ~94KB binary),
[freebsd-builder](https://github.com/please-build/freebsd-builder) for
FreeBSD, and GitHub Actions' macOS 15 runners for Darwin.

Although Ubuntu arm64 GitHub runners are available, the linux_arm64
release has to be built on an Ubuntu amd64 runner because
JavaScript-based workflow actions currently can't be executed on an
Alpine arm64 container running on an arm64 host - see:

- https://github.com/actions/upload-artifact/issues/739
- https://github.com/actions/runner/issues/801

--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -28,7 +28,7 @@ jobs:
           - '3.13'
           - '3.14'
   test-please_pex:
-    name: Test (${{ matrix.platform}}, Python ${{ matrix.python }}, in-repo please_pex)
+    name: Test please_pex
     uses: ./.github/workflows/plugin_test.yaml
     with:
       platform: ${{ matrix.platform }}
@@ -71,23 +71,46 @@ jobs:
           - '3.12'
           - '3.13'
           - '3.14'
+  build-please_pex-artifacts:
+    name: Build please_pex release artifacts
+    if: github.ref == 'refs/heads/master'
+    needs:
+      - test-please_pex
+    uses: ./.github/workflows/please_pex_build.yaml
+    with:
+      platform: ${{ matrix.platform }}
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - darwin_amd64
+          - darwin_arm64
+          - freebsd_amd64
+          - linux_amd64
+          - linux_arm64
   release-please_pex:
     name: Release please_pex
     if: github.ref == 'refs/heads/master'
     needs:
-      - test-please_pex
+      - build-please_pex-artifacts
     runs-on: ubuntu-latest
+    env:
+      BIN_DIR: /tmp/please_pex_release
     steps:
+      - name: Download please_pex binaries from artifact storage
+        uses: actions/download-artifact@v6
+        with:
+          path: ${{ env.BIN_DIR }}
+          pattern: please_pex_*
+          merge-multiple: true
       - name: Check out code
-        uses: actions/checkout@v5
-      - name: Build release files
-        run: ./pleasew build //package:please_pex_release_files
+        uses: actions/checkout@v6
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: thought-machine/release-action@master
         with:
-          release-files: plz-out/package/please_pex
+          release-files: ${{ env.BIN_DIR }}
           version-file: tools/please_pex/VERSION
           change-log-file: tools/please_pex/ChangeLog
           release-prefix: please_pex
